C2: assert(false) failed: Bad graph detected in build_loop_late

XMLWordPrintable

    • b15
    • Verified

        Crash happened when run the following test
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # SIGSEGV (0xb) at pc=0x00007f109e08240b, pid=19518, tid=19536
        #
        # JRE version: OpenJDK Runtime Environment (18.0) (build 18-internal+0-adhoc.root.jdkdev)
        # Java VM: OpenJDK 64-Bit Server VM (18-internal+0-adhoc.root.jdkdev, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0xa8f40b] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x13b
        #
        # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # If you would like to submit a bug report, please visit:
        # https://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: LoadSplitThruPhi

        Host: AMD EPYC 7K62 48-Core Processor, 8 cores, 60000G, CentOS Linux release 7.2 (Final)
        Time: Tue Aug 17 19:41:33 2021 CST elapsed time: 0.280694 seconds (0d 0h 0m 0s)

        --------------- T H R E A D ---------------

        Current thread (0x00007f10041ba540): JavaThread "C2 CompilerThread2" daemon [_thread_in_native, id=19536, stack(0x00007f1031cfd000,0x00007f1031dfe000)]


        Current CompileTask:
        C2: 280 378 4 LoadSplitThruPhi::getPermutations1 (86 bytes)

        Stack: [0x00007f1031cfd000,0x00007f1031dfe000], sp=0x00007f1031df8dc0, free space=1007k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0xa8f40b] PhaseIdealLoop::build_loop_late_post_work(Node*, bool)+0x13b
        V [libjvm.so+0xa8fa80] PhaseIdealLoop::build_loop_late(VectorSet&, Node_List&, Node_Stack&)+0x180
        V [libjvm.so+0xa903ab] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x75b
        V [libjvm.so+0x59b1f9] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x149
        V [libjvm.so+0x598c5e] Compile::Optimize()+0x85e
        V [libjvm.so+0x59aae2] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, bool, DirectiveSet*)+0xe52
        V [libjvm.so+0x4db911] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x191
        V [libjvm.so+0x5a37f8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xf68
        V [libjvm.so+0x5a4428] CompileBroker::compiler_thread_loop()+0x4a8
        V [libjvm.so+0xdfe760] JavaThread::thread_main_inner()+0x190
        V [libjvm.so+0xe02730] Thread::call_run()+0xc0
        V [libjvm.so+0xbd04d1] thread_native_entry(Thread*)+0xe1

          1. hs_err_pid19518.log
            70 kB
            Wang Chao
          2. SDD1.java
            2 kB
            Wang Chao
          3. hs_err_pid3611.log
            69 kB
            Wang Chao

              Assignee:
              Wang Chao
              Reporter:
              Wang Chao
              Votes:
              0 Vote for this issue
              Watchers:
              13 Start watching this issue

                Created:
                Updated:
                Resolved: