8272574: C2: assert(false) failed: Bad graph detected in build_loop_late

Backport-of: 16c3ad1ff4d9a0e21f15656c73a96a6c143c811a